--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,12 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no" />
+  <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>
     <%= htmlWebpackPlugin.options.title %>
   </title>
-
-  <!-- For material-ui -->
-  <link rel="stylesheet" href="https://fonts.loli.net/css?family=Roboto:300,400,500">
-  <link rel="stylesheet" href="https://fonts.loli.net/icon?family=Material+Icons">
+ 
 </head>
 
 <body>
